retrieveUnpackaged/objects/TestB__c.object
<CustomObject>
    <fields>
        <fullName>Account_Cross__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Cross</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TestBs</relationshipLabel>
        <relationshipName>TestBs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day_of_Month__c</fullName>
        <defaultValue>DAY( DATE(2015,4,01) )</defaultValue>
        <label>Day of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Cross_Name__c</fullName>
        <formula>Oppty_Ref__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty_Cross_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TestBs</relationshipLabel>
        <relationshipName>TestBs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Location__c</fullName>
        <label>Shipping Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testa__c</fullName>
        <label>testa</label>
        <summaryForeignKey>TestA__c.TestBontestA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>TestB</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>